--- a/drag-and-drop/src/App.css
+++ b/drag-and-drop/src/App.css
@@ -1,8 +1,9 @@
 .title {
-  font-size: 2rem;
-  text-align: center !important;
+  max-width: 60vh;
+  font-size: 3rem;
+  text-align: center;
   margin-top: 10%;
-  color: #4aa1f3;
+  color: #000639;
   font-weight: bold;
 }
 
@@ -25,19 +26,33 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 1%;
+  border-radius: 3%;
+  margin-top: 2%;
+  margin-bottom: 5%;
+  transition: 1s;
+}
+
+.dragContainer:hover {
+  background-color: #000639;
 }
 
 .table {
+  table-layout: fixed;
   border-collapse: collapse;
 }
 
 tr {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  
 }
 
 td {
+  justify-content: space-between;
+  min-height: 2,5vh;
+  min-width: 40vh;
   border: 1px solid #000000;
   padding: 10px;
+  text-align: center;
 }
